--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row top-padding" id="top-padding">
          <div class="col-sm-6 number_mobile">
-            <p>8-910-345-78-95</p>
+            <p>+7 (910) 345-78-95</p>
         </div>
         <div class="col-sm-6 logo_mobile">
             <img src="{% static 'shop/img/logo.png' %}">
@@ -65,7 +65,7 @@
 
         </div>
             <div class="col-md-3 info" id="info">
-            <p>+7 (910) 244-36-26 <br/></p>
+            <p>+7 (910) 244-36-26 <br/>Работаем с 8:00 до 20:00</p>
         </div>
         <div class="col-md-2 logo col-sm-12" id="logo">
             <img src="{% static 'shop/img/logo.png' %}">
@@ -97,7 +97,9 @@
     <div class="main">
         <div class="row infmain">
             <div class="col-md-2"></div>
-            <div class="col-md-8 textmain"><p>Цветы приносят ощущение романтики и весенней свежести<br/>Дарите девушкам цветы, им это нравится!</p></div>
+            <div class="col-md-8 textmain"><p>Магазин Purpur открыт для всех желающих приобрести цветы в розницу и оптом<br>
+                Находимся мы по адресу г.Воронеж, ул. Бульвар Победы 30, ТЦ "Дон"<br>
+            </div>
             <div class="col-md-2"></div>
         </div>
         <div class="row categor" id="anchor_catalog">
@@ -129,7 +131,7 @@
         <div class="row paige"></div>
         <div class="row aftercatalog" id="anchor_constructor"></div>
         <div class="row imagelego">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6 col-sm-12" style="height: 310px;">
                 <div class="row top">
                     <p class="start_choise caption">1. Выберите цветы</p>
                     <p class="choise_info descrip">В букет можно добавить любые цветы из<br/>ассортимента магазина </p>
@@ -139,7 +141,7 @@
                     <p class="quant_info descrip">При добавлении желаемых цветов к букету можно<br/>указать, сколько цветков каждого вида он<br/>будет содержать</p>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6 col-sm-12" style="height: 310px;">
                 <div class="row top">
                     <p class="choise_pack caption">3. Выберите упаковку</p>
                     <p class="choise_pack_info descrip">Для букетов доступно несколько вариантов<br/>упаковочного материала</p>
@@ -176,11 +178,11 @@
     </div>
     <div class="footer row">
         <div class="row end">
-            <div class="col-md-3 adress col-sm-8">
+            <div class="col-md-8 adress col-sm-8">
                 <div><p>Контакты
                     <br/>+7 (910) 234-23-24
-                    <br/>afsdfasdfa@mail.com
-                    <br/>Ул. Бульвар победы 36, 2 этаж</p>
+                    <br/>purpur36@bk.ru
+                    <br/>г. Воронеж, ул.Бульвар Победы 30, ТЦ "Дон"</p>
                 </div>
                 <div class="soc_adress">
                     <a href="#"><img class="socweb vk socweb-footer" src="{% static 'shop/img/vk_white.png' %}"></a>
@@ -188,7 +190,7 @@
                     <a href="#"><img class="socweb socweb-footer" src="{% static 'shop/img/inst_white.png' %}"></a>
                 </div>
             </div>
-            <div class="col-md-8"></div>
+            <div class="col-md-3"></div>
             <div class="col-md-1 minilogo col-sm-4">
                 <img src="{% static 'shop/img/logo_bely.png' %}">
             </div>
