--- a/shop/templates/shop/lego_flover_shop.html
+++ b/shop/templates/shop/lego_flover_shop.html
@@ -27,7 +27,9 @@
         <div class="basket_lego_main_top">
             <h3>Итого</h3>
             <p>Ваш букет будет состоять из:</p>
-            <img class="close_constructor close" id="close_constructor" src="{% static 'shop/img/krest.png' %}">
+        </div>
+        <div class="close" style="margin-top: -10px;" id="close_constructor">
+            <img src="{% static 'shop/img/krest.png' %}">
         </div>
         <div class="divide"></div>
         <div class="scroll scroll-basket_constructor" id="scroll-basket-in-constructor">
