--- a/shop/templates/shop/search_input.html
+++ b/shop/templates/shop/search_input.html
@@ -18,9 +18,9 @@
                 </button>
             </form>
           </div>
-         <div id="close_search" class="close_search img_top"><img src="{% static 'shop/img/krest.png' %}"></div>
+         <div id="close_search" class="close close_search"><img src="{% static 'shop/img/krest.png' %}"></div>
     </div>
-    <div class="divide" style="display: inline-block"></div>
+    <div class="divide" style="display: inline-block; margin-bottom: 0!important;"></div>
     <div class="search-scroll">
     {% for product in search_products %}
     <div class="block_info_search">
